// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput rendering should render an input 1`] = `
<div
  className="form-group"
>
  <input
    className="input-city"
    id="city"
    name="city"
    onChange={[Function]}
    placeholder="city"
    type="text"
    value="SF"
  />
</div>
`;

exports[`TextInput rendering should render an input with a default value 1`] = `
<div
  className="form-group"
>
  <input
    className="input-city"
    id="city"
    name="city"
    onChange={[Function]}
    placeholder="city"
    type="text"
    value={undefined}
  />
</div>
`;

exports[`TextInput rendering should render an password input 1`] = `
<div
  className="form-group"
>
  <input
    className="input-password"
    id="password"
    name="password"
    onChange={[Function]}
    placeholder="password"
    type="password"
    value=""
  />
</div>
`;
